fixed googleplay and appstore logo on small screens in get app section, added footer-top(logo and language switch)

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 /* defaults */
 body {
     color: #555f62;
-    background-color: #f9fafa;
+    background-color: rgb(249 250 250);
     font-family: TBCX, sans-serif;
     font-size: 14px;
     font-weight: 400;
@@ -716,6 +716,12 @@ ul {
         justify-self: start;
     }
 }
+@media (max-width: 991px) {
+    .google-play-button,
+    .appstore-button {
+        display: none;
+    }
+}
 @media (min-width: 992px) {
     .get-app-button-mobile {
         display: none;
@@ -746,3 +752,80 @@ ul {
     background-image: url('/assets/personal-banker.png');
 }
 
+
+
+/* Footer */
+/* Footer Top */
+.footer-wrapper {
+    padding-top: 36px;
+    background-color: rgb(255 255 255);
+    border-radius: 4px;
+}
+.footer-top {
+    padding: 32px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.footer-logo {
+    background-image: url('./assets/tbc-logo-footer.svg');
+    width: 36px;
+    height: 32px;
+}
+.language-change {
+    position: relative;
+    width: 72px;
+    height: 40px;
+    background-color: rgb(249 250 250);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.language-change::before {
+    content: '';
+    position: absolute;
+    top: 40px;
+    left: 0;
+    width: 72px;
+    height: 4px;
+    background: transparent;
+}
+
+.language {
+    font-family: 'TbcBold', 'sans-serif';
+    font-size: 14px;
+}
+
+.language-list {
+    font-family: 'TbcMedium', 'sans-serif';
+    font-size: 14px;
+    width: 72px;
+    height: 49.5px;
+    position: absolute;
+    display: none;
+    top: 44px;
+    color: #141719;
+    background-color: #fff;
+    border: 1px solid #e1e4e5;
+    border-radius: 4px;
+    align-items: center;
+    padding: 8px 0;
+    box-shadow: 0 4px 6px 2px rgba(12, 43, 67, .05);
+}
+.language-change:hover {
+    background-color: rgb(238 241 241);
+}
+.language-change:hover .language-list {
+    display: flex;
+}
+.language-list p {
+    width: 100%;
+    text-align: center;
+    padding: 4px 0;
+}
+.language-list p:hover {
+    background-color: rgb(238 241 241);
+}
